--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "https://github.com/catalin-luntraru/redux-minimal"
   },
   "scripts": {
-    "start": "webpack-dev-server --inline --hot --history-api-fallback --host localhost --port 8081",
+    "start": "webpack-dev-server --inline --hot --history-api-fallback --host localhost --port 8080",
     "build-dev": "webpack --config webpack.dev.config.js",
     "build-prod": "webpack -p --config webpack.prod.config.js",
     "test": "mocha --recursive --compilers js:babel-register --require babel-polyfill --require ignore-styles",
@@ -30,6 +30,7 @@
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-stage-3": "^7.0.0",
+    "query-string": "^6.5.0",
     "react": "^16.8.6",
     "react-bootstrap": "^0.30.7",
     "react-dev-utils": "^9.0.1",
@@ -43,6 +44,7 @@
     "redux-actions": "^2.6.5",
     "redux-form": "^6.4.3",
     "redux-saga": "^0.14.3",
+    "reselect": "^4.0.0",
     "webpack-cli": "^3.3.2"
   },
   "devDependencies": {
