--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "start": "webpack-dev-server --inline --hot --history-api-fallback --host localhost --port 8080",
     "build-dev": "webpack --config webpack.dev.config.js",
     "build-prod": "webpack -p --config webpack.prod.config.js",
-    "test": "mocha --recursive --compilers js:babel-register --require babel-polyfill --require ignore-styles",
+    "test": "cross-env NODE_ENV=test mocha --recursive --require @babel/register --require @babel/polyfill --require ignore-styles",
     "test-watch": "npm test -- --watch"
   },
   "author": "Catalin Luntraru",
@@ -30,6 +30,9 @@
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-stage-3": "^7.0.0",
+    "@babel/register": "^7.4.4",
+    "cross-env": "^5.2.0",
+    "enzyme-adapter-react-16": "^1.13.1",
     "query-string": "^6.5.0",
     "react": "^16.8.6",
     "react-bootstrap": "^0.30.7",
@@ -54,10 +57,10 @@
     "babel-runtime": "^6.20.0",
     "clean-webpack-plugin": "^0.1.15",
     "css-loader": "^2.1.1",
-    "enzyme": "^2.7.0",
+    "enzyme": "^3.9.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "ignore-styles": "^5.0.1",
-    "mocha": "^3.2.0",
+    "mocha": "^6.1.4",
     "node-sass": "^4.3.0",
     "react-addons-test-utils": "^15.4.2",
     "react-hot-loader": "^4.8.6",
