--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,16 @@
 {
+  "env": {
+    "test": {
+      "presets": [
+        [
+          "@babel/preset-env",
+          {"targets":
+            {"node": "current"}
+          }
+        ],
+        "@babel/preset-react"]
+    }
+  },
   "presets": [
     [
       "@babel/preset-env",
