--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "start": "webpack-dev-server --inline --hot --history-api-fallback --host localhost --port 8080",
     "build-dev": "webpack --config webpack.dev.config.js",
     "build-prod": "webpack -p --config webpack.prod.config.js",
+    "format": "prettier \"**/*.{js,jsx}\" --write",
+    "lint": "eslint  --ext .js src",
     "test": "cross-env NODE_ENV=test mocha --recursive --require @babel/register --require @babel/polyfill --require ignore-styles",
     "test-watch": "npm test -- --watch"
   },
@@ -32,7 +34,6 @@
     "@babel/preset-stage-3": "^7.0.0",
     "@babel/register": "^7.4.4",
     "cross-env": "^5.2.0",
-    "enzyme-adapter-react-16": "^1.13.1",
     "query-string": "^6.5.0",
     "react": "^16.8.6",
     "react-bootstrap": "^0.30.7",
@@ -47,21 +48,32 @@
     "redux-actions": "^2.6.5",
     "redux-form": "^6.4.3",
     "redux-saga": "^0.14.3",
-    "reselect": "^4.0.0",
     "webpack-cli": "^3.3.2"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
     "babel-runtime": "^6.20.0",
     "clean-webpack-plugin": "^0.1.15",
     "css-loader": "^2.1.1",
     "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.13.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-redux-saga": "^1.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "ignore-styles": "^5.0.1",
     "mocha": "^6.1.4",
     "node-sass": "^4.3.0",
+    "prettier": "^1.17.1",
     "react-addons-test-utils": "^15.4.2",
     "react-hot-loader": "^4.8.6",
     "redux-freeze": "^0.1.5",
