--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build-prod": "webpack -p --config webpack.prod.config.js",
     "format": "prettier \"**/*.{js,jsx}\" --write",
     "lint": "eslint  --ext .js src",
-    "test": "cross-env NODE_ENV=test mocha --recursive --require @babel/register --require @babel/polyfill --require ignore-styles",
+    "test": "jest",
     "test-watch": "npm test -- --watch"
   },
   "author": "Catalin Luntraru",
@@ -60,6 +60,7 @@
     "css-loader": "^2.1.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.13.1",
+    "enzyme-to-json": "^3.3.5",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.3.0",
@@ -71,7 +72,7 @@
     "eslint-plugin-redux-saga": "^1.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "ignore-styles": "^5.0.1",
-    "mocha": "^6.1.4",
+    "jest": "^24.8.0",
     "node-sass": "^4.3.0",
     "prettier": "^1.17.1",
     "react-addons-test-utils": "^15.4.2",
